# python-damiao-driver

./: .gitignore  README.md  mkdocs.cloudflare.yml  mkdocs.yml  pyproject.toml  test_docs.sh  test_gs_usb_lifecycle.py  versions.json  wrangler.jsonc
.github/workflows/: deploy-cloudflare-pages.yml  deploy.yml  release.yml  ruff.yml
1.0.2/: 404.html  index.html  objects.inv  sitemap.xml
1.0.3/: 404.html  index.html  sitemap.xml
1.0.4/: 404.html  index.html  sitemap.xml
1.0.5/: 404.html  index.html  sitemap.xml
1.0.5/search/: search_index.json
1.0.6/: 404.html  index.html  sitemap.xml
1.0.7b1/: 404.html  index.html  sitemap.xml
1.0.7b1/assets/: extra.css
damiao_motor/: __init__.py  cli.py  controller.py  motor.py  web_gui.py
damiao_motor/cli/: __init__.py  commands.py  display.py  formatter.py
damiao_motor/core/: __init__.py  controller.py  motor.py
damiao_motor/gui/: __init__.py  web_gui.py
damiao_motor/monitor/: README.md  __init__.py  control.py  decode.py  demo.py  listener.py  server.py  service.py  store.py
damiao_motor/templates/: index.html
dev/: 404.html  index.html  objects.inv  sitemap.xml
dev/assets/: extra.css
dev/search/: search_index.json
docs/: README.md  index.md
docs/api/: cli.md  controller.md  motor.md  registers.md
docs/assets/: extra.css
docs/concept/: can.md  communication-protocol.md  motor-control-modes.md  registers.md
docs/configuration/: can-setup.md  motor-config.md
docs/guide/: cli-tool.md  (+1 more)
examples/: example.py  example_zero_command.py  multi_motor.py  single_motor.py
tests/: test_monitor.py
(+121 files in other folders)
