[build-system]
requires = ["setuptools>=61", "setuptools_scm>=8.0"]
build-backend = "setuptools.build_meta"

[project]
name = "damiao-motor"
dynamic = ["version"]
description = "Python driver for DaMiao motors"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
  {name = "jia", email = "jiaxiejason@gmail.com"},
]
keywords = ["damiao", "motor", "can", "robotics"]
dependencies = [
    "python-can>=4.3,<5.0",
    "flask>=3.0,<4.0",
]

[project.urls]
Homepage = "https://github.com/jia-xie/python-damiao-driver"
Repository = "https://github.com/jia-xie/python-damiao-driver"

[tool.setuptools]
packages = ["damiao_motor"]

[tool.setuptools_scm]
write_to = "damiao_motor/_version.py"

[dependency-groups]
dev = [
    "mkdocs>=1.6.1",
    "mkdocs-material>=9.0.0",
    "mkdocstrings[python]>=0.24.0",
    "ruff>=0.15.1",
]

[tool.setuptools.package-data]
damiao_motor = ["gui/templates/*.html", "gui/static/css/*.css", "gui/static/js/*.js"]
damiao_motor_docs = ["docs/assets/*.css"]

[project.scripts]
damiao = "damiao_motor.cli:unified_main"

[project.optional-dependencies]
docs = [
    "mkdocs>=1.5.0",
    "mkdocs-material>=9.0.0",
    "mkdocstrings[python]>=0.24.0",
    "ruff>=0.15.1",
]


